editor and game now works with overlapping rooms (viewer may be buggy)

--- a/client/src/styles/z-index.scss
+++ b/client/src/styles/z-index.scss
@@ -4,6 +4,10 @@
 .osd__svg {
   z-index: 1;
 }
+.map-editor.-has-selected-room .html-overlay__screen-mask:not(.-selected) {
+  pointer-events: none;
+  z-index: 2;
+}
 
 .osd__mouse-tracker {
   z-index: 2;
